# backend/src/static/swagger.yaml
@@ -275,3 +275,80 @@ paths:
       responses:
         '200':
           description: Despesa de imóvel deletada
+  /usuarios:
+    post:
+      summary: Cria um novo usuário
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                nome:
+                  type: string
+                email:
+                  type: string
+                senha:
+                  type: string
+                is_superuser:
+                  type: boolean
+      responses:
+        '201':
+          description: Usuário criado
+    get:
+      summary: Lista todos os usuários
+      responses:
+        '200':
+          description: Lista de usuários
+  /usuarios/{usuario_id}:
+    get:
+      summary: Obtém um usuário pelo id
+      parameters:
+        - in: path
+          name: usuario_id
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Usuário encontrado
+        '404':
+          description: Usuário não encontrado
+    put:
+      summary: Atualiza um usuário
+      parameters:
+        - in: path
+          name: usuario_id
+          required: true
+          schema:
+            type: integer
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                nome:
+                  type: string
+                email:
+                  type: string
+                senha:
+                  type: string
+                is_superuser:
+                  type: boolean
+      responses:
+        '200':
+          description: Usuário atualizado
+    delete:
+      summary: Deleta um usuário
+      parameters:
+        - in: path
+          name: usuario_id
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Usuário deletado
